# goit-PW-hw-13

dz_13/: .env.exampl  main.py  pyproject.toml  requirements.txt  test.db
dz_13/migrations/: env.py
dz_13/migrations/versions/: 1daf82188a53_init.py  2cad83658927_init.py  8715d73efca8_init.py
dz_13/postgres-data/: postmaster.pid
dz_13/postgres-data/base/13481/: 1247  1249  16389  16391  16398  16400  16402  16408  2224  2606  2608  2610  pg_internal.init
dz_13/postgres-data/global/: pg_control  pg_internal.init
dz_13/postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  global.stat
dz_13/src/: schemas.py
dz_13/src/conf/: config.py
dz_13/src/database/: db.py  models.py
dz_13/src/repository/: users.py
dz_13/src/routes/: auth.py  contacts.py  users.py
dz_13/src/services/: auth.py  email.py
