[tool.poetry]
name = "dz-13"
version = "0.1.0"
description = ""
authors = ["sergeyTurenko123 <sergej_petrovich_8484@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
fastapi-mail = "^1.4.1"
sqlalchemy = "^2.0.31"
alembic = "^1.13.2"
psycopg2 = "^2.9.9"
libgravatar = "^1.0.4"
passlib = "^1.7.4"
bcrypt = "^4.1.3"
python-dotenv = "^1.0.1"
redis = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
